hack/deploy/k8s/deploy.yaml
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: exampledb
#  namespace: gaea-op
#spec:
#  accessModes:
#    - ReadWriteMany
#  resources:
#    requests:
#      storage: 2Gi
#  storageClassName: custom-data-db
---
apiVersion: v1
kind: Namespace
metadata:
  name: gaea-op
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gaea-op
  labels:
    app: example
    version: 0.0.2
  name: example
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
        - name: example
          image: goexample:0.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 7070
              name: http-7070
              protocol: TCP
            - containerPort: 8848
              name: http-8848
              protocol: TCP
            - containerPort: 7071
              name: https-7071
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 125Mi
          volumeMounts:
            - mountPath: /conf
              name: examplecfg
              readOnly: true
            - mountPath: /data/
              name: exampledb
      dnsPolicy: Default
      restartPolicy: Always
      volumes:
        - name: exampledb
          emptyDir: {}
#          persistentVolumeClaim:
#            claimName: exampledb
        - configMap:
            name: examplecfg
            defaultMode: 420
            items:
              - key: config
                path: example.yaml
          name: examplecfg
---
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: gaea-op
spec:
  ports:
    - port: 7070
      name: http-7070
      protocol: TCP
      targetPort: 7070
    - port: 8848
      name: http-8848
      protocol: TCP
      targetPort: 8848
    - port: 7071
      name: https-7071
      protocol: TCP
      targetPort: 7071
  selector:
    app: example
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example
  namespace: gaea-op
spec:
  rules:
    - host: example.bj-internal.ops.com
      http:
        paths:
          - backend:
              serviceName: example
              servicePort: http-7070
            path: /
  tls:
    - hosts:
        - example.bj-internal.ops.com
      secretName: tls-ops-com-prod
